added dark theme

--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Just something...</title>
+        <title>To Do List</title>
         <script src="https://kit.fontawesome.com/266c898db6.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
+        <div id="theme">
+            <i class="fas fa-toggle-off fa-lg"></i>
+        </div>
         <div class="container">
             <div class="header">
                 <div id="clear">
