changed font and background

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>To Do List</title>
         <script src="https://kit.fontawesome.com/266c898db6.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Amiri&display=swap" rel="stylesheet"> 
     </head>
     <body>
         <div id="theme">
