created local storage item for user selected theme to preserve application state upon location reload

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <link href="https://fonts.googleapis.com/css2?family=Amiri&display=swap" rel="stylesheet"> 
     </head>
-    <body>
+    <body onLoad="">
         <div id="theme">
-            <i class="fas fa-toggle-off fa-lg"></i>
+            <i id="toggle" class="fas fa-toggle-off fa-lg"></i>
         </div>
         <div class="container">
             <div class="header">
