--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
         <title>To Do List</title>
         <script src="https://kit.fontawesome.com/266c898db6.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
-        <link href="https://fonts.googleapis.com/css2?family=Amiri&display=swap" rel="stylesheet"> 
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Amiri&display=swap"> 
+        <script defer type="text/javascript" src="script.js"></script>
     </head>
-    <body onLoad="">
+    <body>
         <div id="theme">
             <i id="toggle" class="fas fa-toggle-off fa-lg"></i>
         </div>
-        <div class="container">
-            <div class="header">
+        <div class="app-container">
+            <div class="app-container__header">
                 <div id="clear">
                     <i class="fas fa-redo-alt fa-lg"></i>
                 </div>
@@ -33,6 +34,5 @@
                 <input type="text" id="input" placeholder="Add an item">
             </div>
         </div>
-        <script type="text/javascript" src="script.js"></script>
     </body>
 </html>
