--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                 <ul class="todo-list">
                     <!--
                         <li class="todo-list__item">
-                            <i class="todo-list__circle-icon--unchecked far fa-circle" data-job="complete"></i>
+                            <i class="todo-list__circle-icon--unchecked far fa-circle" data-state"complete"></i>
                             <p class="todo-list__text">To-do item</p>
-                            <i class="todo-list__trash-icon far fa-trash-alt" data-job="delete"></i>
+                            <i class="todo-list__trash-icon far fa-trash-alt" data-state="delete"></i>
                         </li>
                     -->
                 </ul>
