--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <script src="https://kit.fontawesome.com/266c898db6.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Amiri&display=swap"> 
-        <script defer type="text/javascript" src="script.js"></script>
+        <script defer type="module" src="script.js"></script>
     </head>
     <body>
         <div class="theme-selector">
