updated file locations

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>To Do List</title>
         <script src="https://kit.fontawesome.com/266c898db6.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="./css/style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Amiri&display=swap"> 
-        <script defer type="module" src="script.js"></script>
+        <script defer type="module" src="./modules/script.js"></script>
     </head>
     <body>
         <div class="theme-selector">
