updated icon sizes

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     </head>
     <body>
         <div class="theme-selector">
-            <i class="theme-selector__toggle-icon fas fa-toggle-off fa-lg"></i>
+            <i class="theme-selector__toggle-icon fas fa-toggle-off"></i>
         </div>
         <div class="app">
             <div class="header">
                 <div class="todo-list-refresher">
-                    <i class="todo-list-refresher__redo-icon fas fa-redo-alt fa-lg"></i>
+                    <i class="todo-list-refresher__redo-icon fas fa-redo-alt"></i>
                 </div>
                 <div class="date">
                     <span class="date__text">Day Month Year</span>
