--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div class="theme-selector">
-            <i class="theme-selector__toggle-icon fas fa-toggle-off"></i>
+            <i class="theme-selector__toggle-icon far fa-lightbulb"></i>
         </div>
         <div class="app">
             <div class="header">
