--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             <div class="main-content">
                 <ul class="todo-list">
                     <!--
-                        <li class="todo-list__item">
-                            <i class="todo-list__circle-icon--unchecked far fa-circle" data-state"complete"></i>
-                            <p class="todo-list__text">To-do item</p>
-                            <i class="todo-list__trash-icon far fa-trash-alt" data-state="delete"></i>
-                        </li>
+                        `<li class="todo-list__item">
+                            <i class="todo-list__circle-icon ${item.done ? checkedCircleStyle : uncheckedCircleStyle} far ${item.done ? CHECK : UNCHECK}" data-state="complete" id="${item.id}"></i>
+                            <p class="todo-list__text ${item.done ? lineThroughStyle : ""}">${item.text}</p>
+                            <i class="todo-list__trash-icon far fa-trash-alt" data-state="delete" id="${item.id}"></i>
+                        </li>`;
                     -->
                 </ul>
             </div>
