--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </ul>
             </div>
             <div class="item-adder">
-                <i class="item-adder__plus-circle-icon fas fa-plus-circle"></i>
+                <button class="item-adder__plus-circle-icon">+</button>
                 <input type="text" class="item-adder__input" placeholder="Add an item">
             </div>
         </div>
