removed defer attribute from module script since modules are deferred automatically

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Bebas+Neue&family=Permanent+Marker&family=Work+Sans&display=swap" rel="stylesheet"> 
         <script src="https://kit.fontawesome.com/266c898db6.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" type="text/css" href="./css/style.css">
-        <script defer type="module" src="./modules/script.js"></script>
+        <script type="module" src="./modules/script.js"></script>
     </head>
     <body>
         <div class="theme-selector">
