--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>To Do List</title>
-        <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Bebas+Neue&family=Permanent+Marker&family=Work+Sans&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Bebas+Neue&family=Permanent+Marker&family=Work+Sans&family=Ubuntu:wght@400;700&display=swap" rel="stylesheet"> 
         <script src="https://kit.fontawesome.com/266c898db6.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" type="text/css" href="./css/style.css">
         <script type="module" src="./modules/script.js"></script>
@@ -13,17 +13,30 @@
         <!-- <div class="theme-selector">
             <i class="theme-selector__toggle-icon far fa-lightbulb"></i>
         </div> -->
-        <div class="app">
-            <div class="header">
-                <div class="todo-list-refresher">
-                    <i class="todo-list-refresher__redo-icon fas fa-redo-alt"></i>
-                </div>
-                <div class="date">
-                    <span class="date__text">Day Month Year</span>
-                </div>
+        <header>
+            <div class="date">
+                <span class="date__text">Day Month Year</span>
             </div>
+            <nav class="navbar">
+                <ul class="navbar__tabs">
+                    <li class="navbar__tab--active">
+                        View Active Items
+                    </li>
+                    <li class="navbar__tab--completed">
+                        View Completed Items
+                    </li>
+                </ul>
+            </nav>
+            <div class="todo-list-refresher">
+                <i class="todo-list-refresher__redo-icon fas fa-redo-alt"></i>
+            </div>
+        </header>
+        <main role="main">
             <div class="main-content">
                 <ul class="todo-list">
+                    <!-- <li class="new">
+                        Add New Item
+                    </li> -->
                     <!--
                         `<li class="todo-list__item">
                             <i class="todo-list__circle-icon ${item.done ? checkedCircleStyle : uncheckedCircleStyle} far ${item.done ? CHECK : UNCHECK}" data-state="complete" id="${item.id}"></i>
@@ -37,6 +50,6 @@
                 <button class="item-adder__plus-circle-icon">+</button>
                 <input type="text" class="item-adder__input" placeholder="Add an item">
             </div>
-        </div>
+        </main>
     </body>
 </html>
